--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -11,6 +11,8 @@
     </div>
   </section>
   <aside class="right-aside flex-1 padding-sm">
-    right
+    <iframe
+       src="https://www.goldbroker.com/widget/iframe/live/XAG/320?currency=USD"
+        width="100%" height="320" style="border: 0; overflowhidden;"></iframe>
   </aside>
 </main>
