--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -5,6 +5,7 @@
 html, body, h1, h2, h3, h4, h5, h6, p, span, input, textarea {
   margin: 0;
   padding: 0;
+  font-family: 'Open Sans', sans-serif;
 }
 
 a {
@@ -46,8 +47,89 @@ a {
 
 #nav {
   padding: .5rem 0;
-  
+
   ul {
     list-style: none;
+  }
+}
+
+#dashboard-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1001;
+  background: rgb(240, 243, 246);
+
+  .nav {
+    background: rgb(57,70,80);
+    width: 16rem;
+    left: 0;
+    height: 100%;
+    position: fixed;
+    float: left;
+    color: #ccc;
+
+    ul {
+      margin: 0;
+      padding: 0;
+      list-style: none;
+
+      ul {
+        margin-left: 1.25rem;
+        font-size: .9rem;
+      }
+    }
+
+    li {
+      padding: .5rem 1rem;
+    }
+
+    .logo {
+      text-align: center;
+      padding: 0;
+      height: 4rem;
+      align-items: center;
+      justify-content: center;
+      display: flex;
+    }
+
+    .title {
+      margin: .5rem 1rem;
+      border-bottom: 1px solid #ccc;
+      display: block;
+    }
+
+    .show {
+      background: rgb(128, 205, 83);
+      color: #fff;
+    }
+
+    .item {
+      cursor: pointer;
+
+      &:hover {
+        color: #fff;
+        transition: .3s ease-in-out;
+      }
+    }
+  }
+
+  .dash-content {
+    position: fixed;
+    left: 16rem;
+    height: 100vh;
+    right: 0;
+    z-index: 1002;
+  }
+
+  .header {
+    height: 4rem;
+    background: rgb(215,221,227);
+  }
+
+  .dash-section {
+    display: none;
   }
 }
