--- a/app/views/components/_stock-graph.html.erb
+++ b/app/views/components/_stock-graph.html.erb
@@ -1,28 +1,9 @@
-<!-- TradingView Widget BEGIN -->
-<script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-market-overview.js">
-{
-  "showChart": true,
-  "locale": "en",
-  "width": "400",
-  "height": "800",
-  "plotLineColorGrowing": "rgba(60, 188, 152, 1)",
-  "plotLineColorFalling": "rgba(255, 74, 104, 1)",
-  "gridLineColor": "rgba(233, 233, 234, 1)",
-  "scaleFontColor": "rgba(218, 221, 224, 1)",
-  "belowLineFillColorGrowing": "rgba(60, 188, 152, 0.05)",
-  "belowLineFillColorFalling": "rgba(255, 74, 104, 0.05)",
-  "symbolActiveColor": "rgba(242, 250, 254, 1)",
-  "tabs": [
-    {
-      "title": "Commodities",
-      "symbols": [
-        {
-          "s": "TVC:SILVER",
-          "d": "Silver"
-        }
-      ]
-    }
-  ]
-}
-</script>
-<!-- TradingView Widget END -->
+<div class="stock-graph table">
+  <div class="tr th">
+    <span class="td">Stock</span>
+    <span class="td">Last</span>
+    <span class="td">Chg</span>
+    <span class="td">%</span>
+    <span class="td">Vol</span>
+  </div>
+</div>
