--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,9 @@
   <body>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
-
-    <%= render '/layouts/header_lg' %>
+    <%= render '/layouts/header' %>
     <%= render '/layouts/nav' %>
     <%= yield %>
   </body>
+  <%= render 'layouts/footer' %>
 </html>
