Created static pages based off symbols dashboard

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -6,7 +6,7 @@
         <%= link_to('Stocks', '#') %>
         <ul class="dropdown-content stock-list no-list-style">
         <% Stock.all.each do |stock| %>
-          <li><%= stock.name.upcase %></li>
+          <li><a href="./stocks/<%= stock.name.upcase %>"><%= stock.name.upcase %></a></li>
         <% end %>
         </ul>
       </div>
