--- a/app/views/components/_post_form.html.erb
+++ b/app/views/components/_post_form.html.erb
@@ -14,6 +14,9 @@
   <%= f.label :category %>
   <%= f.select(:category, options_for_select([['Commentary', 'commentary'], ['News', 'news'], ['Backtest', 'backtest']]))%>
 
+  <%= f.label :all_tags %>
+  <%= f.text_field :all_tags %>
+
   <div class="form-actions">
     <%= f.button :submit %>
   </div>
