--- a/app/views/components/_post_list.html.erb
+++ b/app/views/components/_post_list.html.erb
@@ -3,6 +3,7 @@
     <h3><%= post.title %></h3>
     <span><%= raw(post.content) %></span>
     <h5><%= post.category %></h5>
+    <span>Tags: <%= post.all_tags %></span>
     <% if user_signed_in? %>
       <div class="post-options">
         <span><%= link_to 'Show', post %></span>
