--- a/app/views/dashboard/_header.html.erb
+++ b/app/views/dashboard/_header.html.erb
@@ -1,3 +1,6 @@
 <div class="header">
-  header
+  <ul class="no-list-style inline-list">
+    <li><%= current_user.email %></li>
+    <a data-confirm="Are you sure?" data-method="delete" href="<%= destroy_user_session_path %>" rel="nofollow">&vellip;</a>
+  </ul>
 </div>
