--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -65,7 +65,6 @@ input {
   display: flex;
   flex-flow: column nowrap;
   font-size: .8rem;
-  margin: 0.5rem;
   line-height: 1.5;
   border-bottom: 1px solid #d0d0d0;
   border-top: 1px solid #d0d0d0;
@@ -108,6 +107,24 @@ input {
   min-width: 0px;
   white-space: nowrap;
   border-bottom: 1px solid #d0d0d0;
+}
+
+.stock-graph-list > .tr {
+  transition: .1s ease-in-out;
+  position: relative;
+
+  .stock-link {
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+  }
+
+  &:hover {
+    padding: 0 .25rem;
+    background: rgba(220,220,220, .1);
+  }
 }
 
 .center {
@@ -218,6 +235,7 @@ input {
     width: 12rem;
     display: none;
     left: -2rem;
+    z-index: 1;
   }
 
   li {
@@ -448,6 +466,7 @@ input {
     margin-bottom: .75rem;
     background: $light;
     border-radius: 5px;
+    padding: 2rem;
   }
 }
 
