--- a/app/views/components/_post_list.html.erb
+++ b/app/views/components/_post_list.html.erb
@@ -1,6 +1,7 @@
 <% @posts.each do |post| %>
   <div class="post-item">
     <h3><%= post.title %></h3>
+    <h6>By: <%= post.author %></h6>
     <span><%= raw(post.content) %></span>
     <h5><%= post.category %></h5>
     <span>Tags: <%= post.all_tags %></span>
