--- a/app/views/components/_truncated_list.html.erb
+++ b/app/views/components/_truncated_list.html.erb
@@ -2,7 +2,9 @@
   <div class="post-item">
     <h3><%= post.title %></h3>
     <span><%= raw(post.content).truncate(358) %></span>
-    <span>Tags: <%= post.all_tags %></span>
+    <% post.tag_arr.each do |tag| %>
+      <%= link_to(tag, "#{tags_path}/#{tag.parameterize}") %>
+    <% end %>
     <% if user_signed_in? %>
       <h5><%= post.category %></h5>
       <div class="post-options">
