--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,3 +1,5 @@
+<%= render '/layouts/header' %>
+<%= render '/layouts/nav' %>
 <main class="flex">
   <aside class="left-aside aside-flex padding-sm">
     <h3 class="title gn">Stock Prices</h3>
