--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -24,8 +24,16 @@ html {
   font-size: 1.2vw;
 }
 
+h2 {
+  font-size: 3rem;
+}
+
 h3 {
   font-size: 1.8rem;
+}
+
+h4 {
+  font-style: 1.5rem;
 }
 
 p, li, a, input {
@@ -53,12 +61,30 @@ a {
   }
 }
 
+ul  {
+  &.cursor > li {
+    cursor: pointer;
+
+    &:hover {
+      color: $navy;
+    }
+  }
+}
+
 body {
   margin: 0 !important;
 }
 
 input {
   padding: .25rem;
+}
+
+.inline {
+  display: inline-block;
+}
+
+.block {
+  display: block;
 }
 
 .table {
@@ -163,12 +189,21 @@ input {
   flex: 1;
 }
 
+.flex-2 {
+  flex: 2;
+}
+
 .aside-flex {
   flex: 3;
 }
 
-.center-flex{
+.center-flex {
   flex: 5;
+}
+
+.flex-row {
+  flex-direction: row;
+  display: flex;
 }
 
 .flex-inline {
@@ -200,6 +235,40 @@ input {
 .bl {
   color: $blue;
   border-bottom: .4rem solid $blue;
+}
+
+.popup {
+  background: rgba(0,0,0,.1);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 11;
+
+  .callout {
+    background: #fff;
+    height: 80vh;
+    width: 40vw;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    box-shadow: 4px 4px 2px #777;
+    border-radius: 5px;
+    padding: 2rem;
+    overflow-y: scroll;
+  }
+
+  li {
+    line-height: 1.5rem;
+  }
+
+  li.title {
+    margin: 1.5rem 0 .5rem;
+    background: $light;
+    padding: .5rem;
+  }
 }
 
 .table-row {
@@ -272,8 +341,19 @@ input {
   color: #fff;
 }
 
+.banner-ad {
+  background: $black;
+  color: #fff;
+  width: 75%;
+  height: 6rem;
+  margin: 0 auto;
+  line-height: 6rem;
+  padding-left: 5rem;
+}
 
 #header {
+  position: relative;
+
   .center {
     padding: 3rem 0;
     height: auto;
@@ -284,6 +364,57 @@ input {
     background: $light;
     padding: 1rem;
     text-align: right;
+    height: 3rem;
+    position: relative;
+    z-index: 2;
+  }
+
+  .inner-logo {
+    width: 2.5rem;
+    height: auto;
+    position: absolute;
+    left: 2rem;
+    top: .4rem;
+    transition: .3s ease-in-out;
+
+    &:hover {
+      transform: scale(1.05);
+    }
+  }
+
+  .inner-nav {
+    position: relative;
+    top: -8rem;
+    right: 0;
+    left: 0;
+    transition: .3s ease-in-out;
+    padding: 0 1rem;
+    background: $light;
+    z-index: 0;
+
+    li {
+      display: inline-block;
+      margin: 1rem;
+    }
+  }
+
+  .show-nav {
+    top: 0;
+  }
+
+  .bar-box {
+    position: absolute;
+    right: 2rem;
+    margin-top: -.25rem;
+    cursor: pointer;
+  }
+
+  .bar {
+    width: 1.75rem;
+    height: .2rem;
+    background-color: #333;
+    margin: .25rem 0;
+    transition: 0.3s;
   }
 }
 
@@ -477,4 +608,20 @@ input {
   h2 {
     margin-bottom: 1rem;
   }
+}
+
+.stock-container {
+  padding: 4rem;
+}
+
+.stock-content {
+  padding-right: 6rem;
+
+  .symbol {
+    margin-right: 1rem;
+  }
+}
+
+.stock-aside {
+
 }
