--- a/app/views/pages/news.html.erb
+++ b/app/views/pages/news.html.erb
@@ -1,3 +1,4 @@
+<%= render 'layouts/inner_nav' %>
 <section class="content-container">
   <h2>News</h2>
   <%= render 'components/truncated_list' %>
