Build Progress - General styling

--- a/app/views/pages/backtests.html.erb
+++ b/app/views/pages/backtests.html.erb
@@ -1,5 +1,15 @@
 <%= render 'layouts/inner_nav' %>
-<section class="content-container">
-  <h2>Backtests</h2>
-  <%= render 'components/truncated_list' %>
+<section class="content">
+  <%= render 'ads/banner' %>
+  <section class="width margin flex-row">
+    <section class="content-container flex-2">
+      <h2>Backtests</h2>
+      <%= render 'components/truncated_list' %>
+    </section>
+    <aside class="stock-aside flex-1">
+      <%= render 'ads/aside_ad' %>
+      <%= render 'ads/aside_ad' %>
+      <%= render 'ads/aside_ad' %>
+    </aside>
+  </section>
 </section>
