--- a/app/views/pages/tags.html.erb
+++ b/app/views/pages/tags.html.erb
@@ -1,4 +1,5 @@
 <%= render 'layouts/inner_nav' %>
+<%= render 'ads/banner' %>
 <section class="content-container">
   <h2>Tags for <%= @title %></h2>
   <%= render 'components/truncated_list' %>
