--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -25,7 +25,7 @@ html {
 }
 
 h2 {
-  font-size: 3rem;
+  font-size: 4rem;
 }
 
 h3 {
@@ -170,10 +170,9 @@ input {
 }
 
 .dashboard-btn {
-  float: left;
   background: $blue;
-  padding: .5rem 1rem;
-  border-radius: 5px;
+  padding: .4rem 1rem;
+  margin-left: 1rem;
   color: #fff;
 
   &:visited {
@@ -212,7 +211,7 @@ input {
   align-items: center;
 }
 
-.m-sm {
+.m-b-sm {
   margin-bottom: 1rem;
 }
 
@@ -245,6 +244,7 @@ input {
   width: 100%;
   height: 100%;
   z-index: 11;
+  display: none;
 
   .callout {
     background: #fff;
@@ -268,6 +268,14 @@ input {
     margin: 1.5rem 0 .5rem;
     background: $light;
     padding: .5rem;
+  }
+}
+
+.popup-title {
+  cursor: pointer;
+
+  &:hover {
+    color: $navy;
   }
 }
 
@@ -345,27 +353,51 @@ input {
   background: $black;
   color: #fff;
   width: 75%;
-  height: 6rem;
-  margin: 0 auto;
-  line-height: 6rem;
+  height: 7rem;
+  margin: 0 auto 3rem;
+  line-height: 7rem;
   padding-left: 5rem;
+}
+
+.aside-ad {
+  font-size: 6rem;
+  text-align: center;
+  line-height: 20rem;
+  height: 20rem;
+  width: 100%;
+  background: $black;
+  color: #fff;
+  margin-bottom: 2rem;
+}
+
+.content {
+  padding: 8rem 0;
+
+  .flex-2 {
+    padding-right: 2rem;
+  }
 }
 
 #header {
   position: relative;
+  width: 100%;
 
   .center {
-    padding: 3rem 0;
+    padding: 3.5rem 0;
     height: auto;
     width: 32rem;
   }
 
   .header-bar {
     background: $light;
-    padding: 1rem;
+    padding: .5rem 1rem;
     text-align: right;
     height: 3rem;
-    position: relative;
+    display: flex;
+    justify-content: flex-end;
+    top: 0;
+    left: 0;
+    right: 0;
     z-index: 2;
   }
 
@@ -383,7 +415,7 @@ input {
   }
 
   .inner-nav {
-    position: relative;
+    position: fixed;
     top: -8rem;
     right: 0;
     left: 0;
@@ -399,7 +431,7 @@ input {
   }
 
   .show-nav {
-    top: 0;
+    top: 3rem;
   }
 
   .bar-box {
@@ -589,16 +621,20 @@ input {
   }
 }
 
-.content-container {
-  width: 70%;
-  padding: 1rem 2rem;
+.width {
+  width: 80%;
+  margin: 0 auto;
 
-  .post-item {
-    margin-bottom: .75rem;
-    background: $light;
-    border-radius: 5px;
-    padding: 2rem;
+  &.margin {
+    margin-top: 6rem;
   }
+}
+
+.post-item {
+  margin-bottom: .75rem;
+  background: $light;
+  border-radius: 5px;
+  padding: 2rem;
 }
 
 .signin {
@@ -611,11 +647,13 @@ input {
 }
 
 .stock-container {
-  padding: 4rem;
+  padding: 4rem 0;
+  width: 75%;
+  margin: 0 auto;
 }
 
 .stock-content {
-  padding-right: 6rem;
+  padding-right: 2rem;
 
   .symbol {
     margin-right: 1rem;
