--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -87,6 +87,19 @@ input {
   display: block;
 }
 
+.upcase {
+  text-transform: uppercase;
+}
+
+.underline {
+  padding-bottom: .25rem;
+  border-bottom: .2rem solid #000;
+}
+
+.f-right {
+  float: right;
+}
+
 .table {
   display: flex;
   flex-flow: column nowrap;
@@ -371,7 +384,7 @@ input {
 }
 
 .content {
-  padding: 8rem 0;
+  padding: 4rem 0;
 
   .flex-2 {
     padding-right: 2rem;
@@ -395,9 +408,7 @@ input {
     height: 3rem;
     display: flex;
     justify-content: flex-end;
-    top: 0;
-    left: 0;
-    right: 0;
+    position: relative;
     z-index: 2;
   }
 
@@ -415,14 +426,19 @@ input {
   }
 
   .inner-nav {
-    position: fixed;
-    top: -8rem;
+    position: relative;
+    top: 0;
     right: 0;
     left: 0;
-    transition: .3s ease-in-out;
+    transition: $ease;
     padding: 0 1rem;
     background: $light;
-    z-index: 0;
+    z-index: 1;
+    opacity: 1;
+
+    li.f-right {
+      margin: .5rem;
+    }
 
     li {
       display: inline-block;
@@ -431,14 +447,20 @@ input {
   }
 
   .show-nav {
-    top: 3rem;
+    top: -3rem;
+    opacity: 0;
   }
 
   .bar-box {
     position: absolute;
     right: 2rem;
-    margin-top: -.25rem;
     cursor: pointer;
+
+    .fa-angle-up,
+    .fa-angle-down {
+      color: rgba(200,200,200,.25);
+      font-size: 2rem;
+    }
   }
 
   .bar {
@@ -623,7 +645,7 @@ input {
 
 .width {
   width: 80%;
-  margin: 0 auto;
+  margin: 6rem auto;
 
   &.margin {
     margin-top: 6rem;
@@ -662,4 +684,15 @@ input {
 
 .stock-aside {
 
+}
+
+.stock-links li {
+  font-size: 1.5rem;
+  line-height: 2rem;
+  cursor: pointer;
+  transition: .3s ease-in-out;
+
+  &:hover {
+    color: $blue;
+  }
 }
