--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,6 @@
 <header id="header">
   <div class="header-bar">
-    <input type="text" name="search" value="">
-    <input type="button" name="search" value="Search">
+    <%= render 'components/search' %>
     <% if user_signed_in? %>
       <%= link_to('Dashboard', dashboard_path, class: 'dashboard-btn') %>
     <% end %>
