--- a/app/views/components/_search.html.erb
+++ b/app/views/components/_search.html.erb
@@ -1,4 +1,6 @@
 <div class="search">
-  <input type="text" name="search" value="">
-  <input type="button" name="search" value="Search">
+  <%= form_tag(search_results_path, :method => "get", id: "search-form") do %>
+    <%= text_field_tag :search, params[:search], placeholder: "Search" %>
+    <%= submit_tag "Search", :name => nil %>
+  <% end %>
 </div>
